admin/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin
spec:
  hosts:
    - "admin.sm.apps.ocp.example.com"
  gateways:
    - admin
  http:
    - rewrite:
        authority: admin.servicemesh-with-serverless.svc.cluster.local
      route:
        - destination:
            host: admin.servicemesh-with-serverless.svc.cluster.local
            port:
              number: 80
